k8s/prod/browser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browser-pool
  labels:
    app: browser-node
spec:
  replicas: 5
  selector:
    matchLabels:
      app: browser-node
  template:
    metadata:
      labels:
        app: browser-node
    spec:
      containers:
      - name: neko
        image: gcr.io/rc-popcorn/browser-node:latest # Production Image
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "3Gi"
            cpu: "2000m"
        securityContext:
          capabilities:
            add: ["SYS_ADMIN"]
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
      nodeSelector:
        node_type: standard
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 2Gi
