k8s/prod/pool-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pool-manager
  labels:
    app: pool-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pool-manager
  template:
    metadata:
      labels:
        app: pool-manager
    spec:
      serviceAccountName: pool-manager
      containers:
      - name: pool-manager
        image: gcr.io/rc-popcorn/pool-manager:latest # Production Image
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pool-manager
spec:
  selector:
    app: pool-manager
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
