k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: popcorn-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "popcorn-gateway-ip-global"
    networking.gke.io/managed-certificates: "popcorn-managed-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: popcorn-gateway
      port:
        number: 80
